--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,40 +1,26 @@
 {
-    // 使用 IntelliSense 了解相关属性。 
-    // 悬停以查看现有属性的描述。
-    // 欲了解更多信息，请访问: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
     "configurations": [
-    {
-        "name": "(gdb) 启动",
-        "type": "cppdbg",
-        "request": "launch",
-        "program": "/mnt/c/Users/yh/Documents/bp/yh-plugins/ragel_helper/a.out",
-        "args": [],
-        "stopAtEntry": false,
-        "cwd": "${fileDirname}",
-        "environment": [],
-        "externalConsole": false,
-        "MIMode": "gdb",
-        "setupCommands": [
-            {
-                "description": "为 gdb 启用整齐打印",
-                "text": "-enable-pretty-printing",
-                "ignoreFailures": true
-            },
-            {
-                "description":  "将反汇编风格设置为 Intel",
-                "text": "-gdb-set disassembly-flavor intel",
-                "ignoreFailures": true
-            }
-        ]
-    },
         {
-            "name": "Python: Current File",
+            "name": "Python: genimplfile.py",
             "type": "python",
             "request": "launch",
-            "program": "${file}",
+            "program": "/mnt/c/Users/yh/Documents/bp/yh-plugins/ragel_helper/genimplfile.py",
             "console": "integratedTerminal",
-            "args": ["/mnt/c/Users/yh/Documents/bp/yh-plugins/ragel_helper/testjson/sample.json", "/mnt/c/Users/yh/Documents/bp/yh-plugins/ragel_helper"],
+            "args": [
+                "/mnt/c/Users/yh/Documents/bp/yh-plugins/ragel_helper/cd_machine.h"
+            ],
+            "justMyCode": true
+        },
+        {
+            "name": "Python: json2rl.py",
+            "type": "python",
+            "request": "launch",
+            "program": "/mnt/c/Users/yh/Documents/bp/yh-plugins/ragel_helper/json2rl.py",
+            "console": "integratedTerminal",
+            "args": [
+                "/mnt/c/Users/yh/Documents/bp/yh-plugins/ragel_helper/testjson/sample.json",
+                "/mnt/c/Users/yh/Documents/bp/yh-plugins/ragel_helper"
+            ],
             "justMyCode": true
         }
     ]
